--- a/icon-toggle.html
+++ b/icon-toggle.html
@@ -23,13 +23,22 @@
     </style>
 
     <!-- local DOM goes here -->
-    <iron-icon icon="polymer">
+    <iron-icon icon="[[toggleIcon]]">
     </iron-icon>
   </template>
 
   <script>
     Polymer({
       is: 'icon-toggle',
+      properties: {
+        toggleIcon: String,
+        pressed: {
+          type: Boolean,
+          value: false, // default value
+          notify: true, // dispatches property change events when the property value changes
+          reflectToAttribute: true // tells Polymer to update the corresponding attribute when the property changes
+        }
+      }
     });
   </script>
 
