Finishes first element

--- a/demo/icon-toggle-demo.html
+++ b/demo/icon-toggle-demo.html
@@ -8,6 +8,15 @@
     <style>
       :host {
         font-family: sans-serif;
+        --icon-toggle-color: lightgrey;
+        /*--icon-toggle-outline-color: black;*/
+        --icon-toggle-pressed-color: red;
+      };
+
+      :root {
+        body {
+          --icon-toggle-color: purple;
+        }
       };
     </style>
 
