--- a/demo/index.html
+++ b/demo/index.html
@@ -9,6 +9,20 @@
       */
     </script>
     <link rel="import" href="icon-toggle-demo.html">
+
+    <style is="custom-style">
+      :root {
+        --icon-toggle-outline-color: red;
+      }
+
+      icon-toggle-demo {
+        --icon-toggle-pressed-color: blue;
+      }
+
+      body {
+        --icon-toggle-color: purple;
+      }
+    </style>
   </head>
   <body>
     <icon-toggle-demo></icon-toggle-demo>
